Bug 361911 - Overriding hotkeys won't work (conflict of new hotkey with old one)
Summary: Overriding hotkeys won't work (conflict of new hotkey with old one)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 3.0 Alpha
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-17 21:02 UTC by bartosz.styperek
Modified: 2020-04-09 12:13 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bartosz.styperek 2016-04-17 21:02:24 UTC
Overriding hotkeys seems to be broken in krita 3.0 alpha.  For example If I try to set 'C' key to color popup,  krita informs me that: 'c' hotkey is used for Crop operation. Do  I want to set Crop to None? 
I press yes. Then Ok to save changes. 
But then when I press 'C'  key while painting, error message pops something like:
'key conflict', C key is used by more that two commands.  Go to preferences to fix it'
Then if I go to preferences C key is indeed set in both  'Crop tool' and 'color selector'. 
Basically setting hotkey to 'none' is buggy.

Reproducible: Always

Steps to Reproduce:
1. Try setting 'color selector' hotkey to 'C' key in preferences.
2. Message pops - accept setting Crop Tool to None.
3. Close Preferences with Ok button.
4. When you use C key, error pops with info about bad hotkey configuration.

Actual Results:  
'C' key is assigned to both Crop and Color popup.

Expected Results:  
'C' key shoud be assigned to Color Selector only. Crop tool should be set to none. 

Worked ok in stable krita 2.9
Comment 1 basse 2016-04-22 10:03:48 UTC
confirmed.. 
setting to "None" doesn't work. 
and trying to set to key that already is used doesn't work.

furthermore, I set Crop to "shift-c" which works fine, but then I cannot set it back to default because Krita complains that "c" is already used with curve segment... 

so now I'm stuck with shift-c  :)

.b
Comment 2 Raghavendra kamath 2016-04-22 11:24:35 UTC
confirmed

P.S. 'C' is indeed duplicated in the default shortcuts scheme and thus further adds to the confusion.

I tried with another shortcut too , 'F' is for fill tool , i tried to assign this to gradient tool , it complained that 'F' is assigned to Fill tool and action of straightening line segment. so next time when i want to re assign F for fill tool it complains
Comment 3 ocumo 2016-05-02 17:46:34 UTC
I can confirm that this problem is happening in krita-3.0-Beta-master-no_gmic-4336582-x86_64.appimage running in Kubuntu 16.04 .

It doesn't seem to be possible to override default shortcuts, even creating new templates, saving or loading other existing templates that are working in Krita stable otherwise.

In addition, maybe a minor thing, but in the above mentioned 3.0 pre version, there is no  'Configure Shortcuts' in the 'Settings' menu as it exists in Krita stable.   If that would be a design decision rather than a bug, then it would be another topic, but then the "Ambiguous shortcut detected" dialog that pops up when we are trying to override an existing one, has to be updated, as its current text is:
        Ambiguous shortcut detected
        The key sequence 'W' is ambiguous. Use 'Configure Shortcuts'
        from the 'Settings' menu to solve the ambiguity.
        No action will be triggered.
Comment 4 ocumo 2016-05-07 01:58:28 UTC
Update: bad news.
I have just downloaded krita-3.0-Beta-master-37389d5-x86_64.appimage and I have exactly the same problem,  same symptoms, no improvement, despite what is in the "New Development Builds Ready" release notes from May 5, reporting various fixes to shortcut issues.
My system is Kubuntu 16.04.
Comment 5 eliotJ 2016-05-07 22:30:26 UTC
#ocumo
There was fixed other bugs with shortcuts. You should notice that this bug still has status "confirmed", not "fixed".
Comment 6 ocumo 2016-11-09 16:47:10 UTC
Unfortunately the same problem is happening with krita-3.0.92-x86_64.appimage. I'm using Kubuntu 16.04. With current stable krita-3.0.1.1-x86_64.appimage I was forced to recreate all my customizations one by one because all existing ones just would have been replaced by default. I did not have time to make systematic troubleshooting, I just needed to move on with my work, and this is an old issue (similar bugs exist since at least 2014 with several releases) that is described sometimes with different titles, but when we read, there you find the infamous "sequence is ambiguous" that won't be possible to eliminate, and/or missing/overriden shortcut configurations.

See for example:  #352205 and #348033
Comment 7 Halla Rempt 2020-04-09 12:13:29 UTC
This has since been fixed.