Fix saving empty custom shortcuts

Ensure that defaultShortcut for an action with no default shortcut is an
empty list, not a list containing a single item, QKeySequence("")

Maniphest Tasks: T1244
BUG: 361911